Apply IDE suggestions